added focus section in home page

--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,32 @@
 
     <div class="wrapper">
         <div id="header-container"></div>
-
-
         <main>
             <section>
-                <div class="home home__container"></div>
-                <h1>LOOKING ipsum dolor sit amet consectetur adipisicing elit. Ea pariatur voluptas ut quas nemo ipsum,
-                    sapiente
-                    impedit, qui optio adipisci illo facere minus quo natus. Maxime odit deserunt earum necessitatibus?
-                </h1>
+                <div class="home home__container-big">
+                    <div class="home__content home-content">
+                        <h1 class="home-content__title">FOCUS ON THE PRODUCT AND LET US DO THE REST!</h1>
+                        <div class="home-content__reverse">
+                            <p class="home-content__text">We’re an Indian software development company focused on just
+                                one thing -
+                                offshore software development services. We have 16+ years of experience and a team of
+                                450+
+                                developers working efficiently to deliver unique solutions to start-ups, software
+                                development companies, enterprises, and digital agencies to simplify their IT
+                                outsourcing
+                                experience & reduce time/cost to market.</p>
+                            <nav class="home-content__navigation">
+                                <a href="">
+                                    <div class="button-white">MORE</div>
+                                </a>
+                                <a href="">
+                                    <div class="button-lightGreen">Contact us</div>
+                                </a>
+                            </nav>
+                        </div>
+                        <div class="home-content__swiper"></div>
+                    </div>
+                </div>
             </section>
         </main>
         <div id="footer-container"></div>
