--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,11 @@
 <body>
 
     <div class="wrapper">
+        <!--header-->
         <div id="header-container"></div>
+        <div id="socials-container"></div>
         <main>
+
             <section>
                 <div class="home home__container-big">
                     <div class="home__content home-content">
@@ -34,11 +37,26 @@
                                 </a>
                             </nav>
                         </div>
-                        <div class="home-content__swiper"></div>
+
                     </div>
-                </div>
             </section>
         </main>
+        <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide swiper-slide-1">Slide 1</div>
+                <div class="swiper-slide swiper-slide-2">Slide 2</div>
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+
+        <!--footer-->
         <div id="footer-container"></div>
     </div>
 </body>
