added section services/home

--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
         <div id="header-container"></div>
         <div id="socials-container"></div>
         <main>
-
+            <!--focus Section-->
             <section>
-                <div class="home home__container-big">
-                    <div class="home__content home-content">
-                        <h1 class="home-content__title">FOCUS ON THE PRODUCT AND LET US DO THE REST!</h1>
-                        <div class="home-content__reverse">
-                            <p class="home-content__text">We’re an Indian software development company focused on just
+                <div class="focus focus__container-big">
+                    <div class="focus__content focus-content">
+                        <h1 class="focus-content__title">FOCUS ON THE PRODUCT AND LET US DO THE REST!</h1>
+                        <div class="focus-content__reverse">
+                            <p class="focus-content__text">We’re an Indian software development company focused on just
                                 one thing -
                                 offshore software development services. We have 16+ years of experience and a team of
                                 450+
@@ -28,7 +28,7 @@
                                 development companies, enterprises, and digital agencies to simplify their IT
                                 outsourcing
                                 experience & reduce time/cost to market.</p>
-                            <nav class="home-content__navigation">
+                            <nav class="focus-content__navigation">
                                 <a href="">
                                     <div class="button-white">MORE</div>
                                 </a>
@@ -37,8 +37,105 @@
                                 </a>
                             </nav>
                         </div>
-
                     </div>
+                </div>
+            </section>
+            <!--technologies Section-->
+            <div id="technologiesSection-container"></div>
+            <section>
+                <div class="services services__container">
+                    <h2 class="services__title">services</h2>
+                    <div class="services__content services-content">
+                        <div class="services-content__block-row1">
+                            <div class="services-content__block services-content-block">
+                                <div class="services-content-block__info services-content-block-info">
+                                    <h3 class="services-content-block-info__title">GAME DEVELOPMENT</h3>
+                                    <p class="services-content-block-info__text">Lorem ipsum dolor sit amet,
+                                        consectetur
+                                        adipiscing elit. Sed quis dapibus purus, viverra porta velit. Nam eleifend,
+                                        dolor a
+                                        condimentum ullamcorper, ligula nunc elementum mi, et mollis odio ligula eu
+                                        felis.
+                                        Vestibulum a libero lorem. Nulla vestibulum id elit in ullamcorper. Fusce
+                                        pellentesque tortor velit, eu rutrum nunc eleifend quis. Fusce dignissim, lectus
+                                        ut
+                                        tristique convallis, leo justo tempus erat, at volutpat arcu tellus eget sapien.
+                                        Aliquam non ligula in ligula malesuada venenatis.Fusce lacus felis, efficitur ut
+                                        euismod ac, gravida sed tortor. Suspendisse vitae imperdiet elit, at viverra
+                                        magna.
+                                        Aenean ut libero ut arcu maximus faucibus ut ut sapien.</p>
+                                </div>
+                                <a href="" class="services-content-block__image"><img
+                                        src="../src/assets/img/home/socials/game.svg" alt="Game"></a>
+                            </div>
+                            <div class="services-content__block services-content-block services-content-block-reverse">
+                                <a href="" class="services-content-block__image"><img
+                                        src="../src/assets/img/home/socials/game.svg" alt="Game"></a>
+                                <div class="services-content-block__info services-content-block-info">
+                                    <h3 class="services-content-block-info__title">GAME DEVELOPMENT</h3>
+                                    <p class="services-content-block-info__text">Lorem ipsum dolor sit amet,
+                                        consectetur
+                                        adipiscing elit. Sed quis dapibus purus, viverra porta velit. Nam eleifend,
+                                        dolor a
+                                        condimentum ullamcorper, ligula nunc elementum mi, et mollis odio ligula eu
+                                        felis.
+                                        Vestibulum a libero lorem. Nulla vestibulum id elit in ullamcorper. Fusce
+                                        pellentesque tortor velit, eu rutrum nunc eleifend quis. Fusce dignissim, lectus
+                                        ut
+                                        tristique convallis, leo justo tempus erat, at volutpat arcu tellus eget sapien.
+                                        Aliquam non ligula in ligula malesuada venenatis.Fusce lacus felis, efficitur ut
+                                        euismod ac, gravida sed tortor. Suspendisse vitae imperdiet elit, at viverra
+                                        magna.
+                                        Aenean ut libero ut arcu maximus faucibus ut ut sapien.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="services-content__block-row2">
+                            <div class="services-content__block services-content-block">
+                                <div class="services-content-block__info services-content-block-info">
+                                    <h3 class="services-content-block-info__title">GAME DEVELOPMENT</h3>
+                                    <p class="services-content-block-info__text">Lorem ipsum dolor sit amet,
+                                        consectetur
+                                        adipiscing elit. Sed quis dapibus purus, viverra porta velit. Nam eleifend,
+                                        dolor a
+                                        condimentum ullamcorper, ligula nunc elementum mi, et mollis odio ligula eu
+                                        felis.
+                                        Vestibulum a libero lorem. Nulla vestibulum id elit in ullamcorper. Fusce
+                                        pellentesque tortor velit, eu rutrum nunc eleifend quis. Fusce dignissim, lectus
+                                        ut
+                                        tristique convallis, leo justo tempus erat, at volutpat arcu tellus eget sapien.
+                                        Aliquam non ligula in ligula malesuada venenatis.Fusce lacus felis, efficitur ut
+                                        euismod ac, gravida sed tortor. Suspendisse vitae imperdiet elit, at viverra
+                                        magna.
+                                        Aenean ut libero ut arcu maximus faucibus ut ut sapien.</p>
+                                </div>
+                                <a href="" class="services-content-block__image"><img
+                                        src="../src/assets/img/home/socials/3d.svg" alt="Game"></a>
+                            </div>
+                            <div class="services-content__block services-content-block services-content-block-reverse">
+                                <a href="" class="services-content-block__image"><img
+                                        src="../src/assets/img/home/socials/vr.svg" alt="Game"></a>
+                                <div class="services-content-block__info services-content-block-info">
+                                    <h3 class="services-content-block-info__title">GAME DEVELOPMENT</h3>
+                                    <p class="services-content-block-info__text">Lorem ipsum dolor sit amet,
+                                        consectetur
+                                        adipiscing elit. Sed quis dapibus purus, viverra porta velit. Nam eleifend,
+                                        dolor a
+                                        condimentum ullamcorper, ligula nunc elementum mi, et mollis odio ligula eu
+                                        felis.
+                                        Vestibulum a libero lorem. Nulla vestibulum id elit in ullamcorper. Fusce
+                                        pellentesque tortor velit, eu rutrum nunc eleifend quis. Fusce dignissim, lectus
+                                        ut
+                                        tristique convallis, leo justo tempus erat, at volutpat arcu tellus eget sapien.
+                                        Aliquam non ligula in ligula malesuada venenatis.Fusce lacus felis, efficitur ut
+                                        euismod ac, gravida sed tortor. Suspendisse vitae imperdiet elit, at viverra
+                                        magna.
+                                        Aenean ut libero ut arcu maximus faucibus ut ut sapien.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
         <div class="swiper">
