added section looking/home

--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,8 @@
                     </div>
                 </div>
             </section>
+            <!--looking Section-->
+            <div id="lookingSection-container"></div>
         </main>
         <div class="swiper">
             <!-- Additional required wrapper -->
