added section achievements/home

--- a/src/index.html
+++ b/src/index.html
@@ -139,6 +139,39 @@
             </section>
             <!--looking Section-->
             <div id="lookingSection-container"></div>
+            <section>
+                <div class="achievements achievements__container-big">
+                    <h2 class="achievements__title">achievements</h2>
+                    <div class="achievements__content achievements-content">
+                        <div class="achievements-content__item achievements-content-item achievements-content-item-1">
+                            <div class="achievements-content-item__image"></div>
+                            <p class="achievements-content-item__text">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates.
+                            </p>
+                        </div>
+                        <div class="achievements-content__item achievements-content-item achievements-content-item-2">
+                            <div class="achievements-content-item__image"></div>
+                            <p class="achievements-content-item__text">
+                                <span>50+</span> successfully launched projects on the the market.
+                            </p>
+                        </div>
+                        <div class="achievements-content__item achievements-content-item achievements-content-item-3">
+                            <div class="achievements-content-item__image"></div>
+                            <p class="achievements-content-item__text">
+                                Asset store publisher since <span>2013</span>
+                            </p>
+                        </div>
+                        <div class="achievements-content__item achievements-content-item achievements-content-item-4">
+                            <div class="achievements-content-item__image"></div>
+                            <p class="achievements-content-item__text">
+                                Our products (packages) used by <span>100k</span>+ devs in <span>5k+</span> commercial
+                                projects worldwide
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
         </main>
         <div class="swiper">
             <!-- Additional required wrapper -->
