added section contacts/home

--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,108 @@
                     </div>
                 </div>
             </section>
-            
+            <section>
+                <div class="partners">
+                    <div class="partners__container-big">
+                        <h2 class="partners__title">Partners</h2>
+                        <div class="partners__content">
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/mon.svg"
+                                    alt="mon"></div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/scopely.svg"
+                                    alt="scopely">
+                            </div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/setp.svg"
+                                    alt="roomful"></div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/roguesun.svg"
+                                    alt="roguesun">
+                            </div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/playmaker.svg"
+                                    alt="playmaker"></div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/true.svg"
+                                    alt="onesignal"></div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/plawius.svg"
+                                    alt="plawius"></div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/unbit.svg"
+                                    alt="soomla"></div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/unbit.svg"
+                                    alt="unbit"></div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/playmaker.svg"
+                                    alt="blackwood"></div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/mobikts.svg"
+                                    alt="mobikts"></div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/plawius.svg"
+                                    alt="plawius">
+                            </div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/setp.svg"
+                                    alt="setp">
+                            </div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/true.svg"
+                                    alt="true"></div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/unbit.svg"
+                                    alt="unbit"></div>
+                            <div class="partners-content__item"><img src="../src/assets/img/home/partners/scopely.svg"
+                                    alt="recenzent"></div>
+                        </div>
+                    </div>
+            </section>
+            <section>
+                <div class="contacts contacts__container">
+                    <h2 class="contacts__title">CONTACTS</h2>
+                    <p class="contacts__text">We are open for dialog and you are welcome to share your opinions or
+                        thoughts with us</p>
+                    <p class="contacts__subtext">Hit us up any time through email with any idea and help us turn your
+                        great ideas into brilliant projects</p>
+                    <div class="contacts__content contacts-content">
+                        <div class="contacts-content__info contacts-content-info">
+                            <div class="contacts-content-info__item contacts-content-info-item">
+                                <a href="" class="contacts-content-info-item__icon"><img
+                                        src="../src/assets/img/home/contacts/contacts-location.svg" alt="location"></a>
+                                <p class="contacts-content-info-item__text">Ukraine, Kyiv, Rodyny Kristeriv 20B, office
+                                    188</p>
+                            </div>
+                            <div class="contacts-content-info__item contacts-content-info-item">
+                                <a href="" class="contacts-content-info-item__icon"><img
+                                        src="../src/assets/img/home/contacts/contacts-telephone.svg"
+                                        alt="telephone"></a>
+                                <p class="contacts-content-info-item__text">+38 (093) 345 56 76</p>
+                            </div>
+                            <div class="contacts-content-info__item contacts-content-info-item">
+                                <a href="" class="contacts-content-info-item__icon"><img
+                                        src="../src/assets/img/home/contacts/contacts-viber.svg" alt="viber"></a>
+                                <p class="contacts-content-info-item__text">+38 (093) 345 56 77</p>
+                            </div>
+                            <div class="contacts-content-info-item__item contacts-content-info-item">
+                                <a href="" class="contacts-content-info-item__icon"><img
+                                        src="../src/assets/img/home/contacts/contacts-skype.svg" alt="skype"></a>
+                                <p class="contacts-content-info-item__text">Stanassets</p>
+                            </div>
+                            <div class="contacts-content-info__item contacts-content-info-item">
+                                <a href="" class="contacts-content-info-item__icon"><img
+                                        src="../src/assets/img/home/contacts/contacts-mail.svg" alt="mail"></a>
+                                <p class="contacts-content-info-item__text">stanAssets@gmail.com</p>
+                            </div>
+                            <div class="contacts-content-info__item contacts-content-info-item">
+                                <a href="" class="contacts-content-info-item__icon"><img
+                                        src="../src/assets/img/home/contacts/contacts-facebook.svg" alt="facebook"></a>
+                                <p class="contacts-content-info-item__text">facebook.com/Stanassets</p>
+                            </div>
+                        </div>
+                        <form class="contacts-content__form contacts-content-form">
+                            <div class="contacts-content-form-inner"></div>
+                            <input class="contacts-content-form__input" type="text" id="fname" name="firstname"
+                                placeholder="Name">
+
+                            <input class="contacts-content-form__input" type="text" id="lname" name="lastname"
+                                placeholder="Last name">
+
+                            <textarea class="contacts-content-form__textarea" id="subject" name="subject"
+                                placeholder="Message" style="height:200px"></textarea>
+
+                            <input type="submit" value="Send request" class="contacts-content-form__button">
+                        </form>
+                    </div>
+                </div>
+            </section>
         </main>
         <div class="swiper">
             <!-- Additional required wrapper -->
